src/test/ui/lifetime-errors/ex3-both-anon-regions-both-are-structs-3.stderr
error[E0261]: use of undeclared lifetime name `'y2`
  --> $DIR/ex3-both-anon-regions-both-are-structs-3.rs:15:57
   |
15 | fn foo<'x1, 'x2, 'y1>(mut x: Ref<'x1, 'x2>, y: Ref<'y1, 'y2>) {
   |                                                         ^^^ undeclared lifetime

error: aborting due to previous error

